--- a/application.yml
+++ b/application.yml
@@ -1,6 +1,7 @@
 spring:
-  applicatio:
+  application:
     name: config-default
+
 eureka:
   instance:
     prefer-ip-address: true
@@ -8,4 +9,4 @@ eureka:
     fetch-registry: true
     register-with-eureka: true
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://localhost:8761/eureka/
